Support serializing shadow DOM to MHTML

The content of shadow DOM tree will be serialized and put within a template element that appends to the children of the shadow host element. The template element contains a special attribute to denote the mode of the shadow dom tree.

When MHTML page is being loaded, the shadow DOM tree will be recreated by the injected script to convert the templates to the shadow DOM trees.

Please see the bug for the link to the design doc.

BUG=695738
TEST=new tests added

Review-Url: https://codereview.chromium.org/2912213002
Cr-Commit-Position: refs/heads/master@{#479550}

Former-commit-id: 05d415724da48cbeba542558a3ce5689ec0fee93